# RepoMind

./: .gitignore  LICENSE  README.md  benchmark_repos.py  cli.py  pyproject.toml  requirements.txt
docs/: MODEL_EVOLUTION.md
repomind/: __init__.py  architecture_analyzer.py  benchmark_runner.py  cli.py  context_builder.py  orchestrator.py
repomind/analyzers/: __init__.py  architecture_analyzer.py
repomind/classification/: __init__.py  structural_class.py
repomind/core/: __init__.py  llm_client.py  scorer.py
repomind/scanners/: __init__.py  repo_scanner.py
repomind/scoring/: __init__.py  architecture_score.py
repomind_report/: scan.json
